# passworder

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  dev_workflows.rs  entropy.rs  exit_codes.rs  lib.rs  main.rs  passphrase.rs  password.rs  token.rs  version.rs
src/app/: mod.rs
src/cli/: mod.rs
src/commands/: entropy.rs  mod.rs  passphrase.rs  password.rs  profile.rs  token.rs  tui.rs  vault.rs  workflows.rs
src/output/: mod.rs  vault_item.rs
src/tui/: action.rs  effect.rs  mod.rs  state.rs  update.rs
src/vault/: crypto.rs  format_v1.rs  io.rs  items.rs  mod.rs  ops.rs  prompt.rs
tests/: cli_exit_codes.rs  dev_workflows.rs  output_modes.rs  vault_commands.rs
