[package]
name = "passworder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.10", features = ["v4"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = "3.10"
