[package]
name = "passworder"
version = "0.1.0"
edition = "2024"

[features]
default = []
clipboard = ["arboard"]
strength = ["zxcvbn"]
dev-seed = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.10", features = ["v4"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tempfile = "3.10"
arboard = { version = "3", optional = true }
zxcvbn = { version = "2", optional = true }
argon2 = { version = "0.5.3", features = ["std"] }
hkdf = "0.12.4"
sha2 = "0.10.9"
secrecy = "0.10.3"
thiserror = "2.0.17"
zeroize = "1.8.2"
chacha20poly1305 = "0.10.1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
